massive refactor for mana to arcana, might have missed stuff